force-app/main/default/objects/NewObjectJune11__c/NewObjectJune11__c.object-meta.xml
<CustomObject>
    <label>NewObjectJune11</label>
    <nameField>
        <label>NewObjectJune11 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewObjectJune11s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>