force-app/main/default/objects/NewObjectJune11__c/fields/NewObjectJune11_Currency__c.field-meta.xml
<CustomField>
    <fullName>NewObjectJune11_Currency__c</fullName>
    <label>NewObjectJune11 Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>