force-app/main/default/objects/NewObjectJune11__c/fields/NewObjectJune11_Phone__c.field-meta.xml
<CustomField>
    <fullName>NewObjectJune11_Phone__c</fullName>
    <label>NewObjectJune11 Phone</label>
    <type>Phone</type>
</CustomField>