force-app/main/default/objects/NewObjectJune11__c/fields/NewObjectJune11_Picklist__c.field-meta.xml
<CustomField>
    <fullName>NewObjectJune11_Picklist__c</fullName>
    <label>NewObjectJune11 Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>