force-app/main/default/objects/NewObjectJune11__c/fields/NewObjectJune11_Text__c.field-meta.xml
<CustomField>
    <fullName>NewObjectJune11_Text__c</fullName>
    <label>NewObjectJune11 Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>